[package]
name = "kv"
version = "0.1.0"
authors = ["sreenath"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = { version = "0.3", default-features = false }
serde_json = "1.0"
regex = "1.3.9"
anyhow = "1.0"
thiserror = "1.0"
bson = "1.1.0"